complete and added sidebar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="bg-grey-lightest">
+<body class="bg-grey-lightest font-sans">
 
     <!-- header -->
     <header class="section-header bg-white py-3 shadow">
@@ -114,8 +114,200 @@
     <!-- end of header -->
 
     <main class="main-content">
-        <div class="aside">lorem</div>
-        <div class="content">lorem</div>
+        <div class="aside bg-aside h-full pt-2 text-sm">
+
+            <a href="#" class="tracking-tight text-black">
+                <div class="pl-8 py-3 active flex items-center">
+                    <i class="fas fa-home mr-4 text-red"></i>
+                    <span>Home</span>
+                </div>
+            </a>
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 flex items-center menu-item">
+                    <i class="fas fa-fire mr-4 text-aside"></i>
+                    <span>Trending</span>
+                </div>
+            </a>
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 flex items-center menu-item">
+                    <i class="fas fa-history mr-4 text-aside"></i>
+                    <span>History</span>
+                </div>
+            </a>
+
+            <div class="border-b border-grey-light border-solid py-1"></div>
+            <!-- divider line -->
+
+            <div class="uppercase text-aside text-sm font-semibold py-3 pl-8">best of youtube</div>
+
+
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 menu-item  flex items-center">
+                    <img src="images/music.jpg" alt="music" class="rounded-full h-5 w-5 mr-4">
+                    <span>Music</span>
+                </div>
+            </a>
+
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 menu-item  flex items-center">
+                    <img src="images/sports.jpg" alt="music" class="rounded-full h-5 w-5 mr-4">
+                    <span>Sports</span>
+                </div>
+            </a>
+
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 menu-item  flex items-center">
+                    <img src="images/gaming.jpg" alt="music" class="rounded-full h-5 w-5 mr-4">
+                    <span>Gaming</span>
+                </div>
+            </a>
+
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 menu-item flex items-center">
+                    <img src="images/movies.jpg" alt="music" class="rounded-full h-5 w-5 mr-4">
+                    <span>Movies</span>
+                </div>
+            </a>
+
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 menu-item flex items-center">
+                    <img src="images/movies.jpg" alt="music" class="rounded-full h-5 w-5 mr-4">
+                    <span>TV Shows</span>
+                </div>
+            </a>
+
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 menu-item flex items-center">
+                    <img src="images/news.jpg" alt="music" class="rounded-full h-5 w-5 mr-4">
+                    <span>News</span>
+                </div>
+            </a>
+
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 menu-item flex items-center">
+                    <img src="images/live.jpg" alt="music" class="rounded-full h-5 w-5 mr-4">
+                    <span>Live</span>
+                </div>
+            </a>
+
+            <a href="#" class="tracking-tight text-black font-medium ">
+                <div class="pl-8 py-3 menu-item flex items-center">
+                    <img src="images/spotlight.jpg" alt="music" class="rounded-full h-5 w-5 mr-4">
+                    <span>SpotLight</span>
+                </div>
+            </a>
+
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 menu-item flex items-center">
+                    <img src="images/music.jpg" alt="music" class="rounded-full h-5 w-5 mr-4">
+                    <span>360&deg; Video</span>
+                </div>
+            </a>
+
+            <div class="border-b border-grey-light border-solid my-1"></div>
+            <!-- divider line -->
+
+            <a href="#" class="font-medium text-sm text-black">
+                <div class="pl-8 py-4 flex items-center menu-item">
+                    <i class="fas fa-plus-circle mr-4 text-grey"></i>
+                    <span class="">Browse Channels</span>
+                </div>
+            </a>
+
+            <div class="border-b border-grey-light border-solid my-1"></div>
+            <!-- divider line -->
+
+            <div class="pl-8 py-3 pr-4">
+                <p class="font-medium text-xs pb-2">Sign in now to see your channels and recommendations!</p>
+                <a href="#" class="uppercase text-blue">sign in</a>
+            </div>
+
+            <div class="border-b border-grey-light border-solid my-1"></div>
+            <!-- divider line -->
+
+            <div class="uppercase text-aside text-sm font-semibold py-3 pl-8">more from youtube</div>
+
+
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 flex items-center menu-item">
+                    <i class="fab fa-youtube fa-lg mr-4 text-aside"></i>
+                    <span>Youtube Premium</span>
+                </div>
+            </a>
+
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 menu-item flex items-center">
+                    <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="fill-current text-aside style-scope yt-icon"
+                        style="pointer-events: none; display: block; width: 100%; height: 100%;">
+                        <g class="style-scope yt-icon">
+                            <path d="M16.94 6.91l-1.41 1.45c.9.94 1.46 2.22 1.46 3.64s-.56 2.71-1.46 3.64l1.41 1.45c1.27-1.31 2.05-3.11 2.05-5.09s-.78-3.79-2.05-5.09zM19.77 4l-1.41 1.45C19.98 7.13 21 9.44 21 12.01c0 2.57-1.01 4.88-2.64 6.54l1.4 1.45c2.01-2.04 3.24-4.87 3.24-7.99 0-3.13-1.23-5.96-3.23-8.01zM7.06 6.91c-1.27 1.3-2.05 3.1-2.05 5.09s.78 3.79 2.05 5.09l1.41-1.45c-.9-.94-1.46-2.22-1.46-3.64s.56-2.71 1.46-3.64L7.06 6.91zM5.64 5.45L4.24 4C2.23 6.04 1 8.87 1 11.99c0 3.13 1.23 5.96 3.23 8.01l1.41-1.45C4.02 16.87 3 14.56 3 11.99s1.01-4.88 2.64-6.54z"
+                                class="style-scope yt-icon"></path>
+                            <circle cx="12" cy="12" r="3" class="style-scope yt-icon"></circle>
+                        </g>
+                    </svg>
+                    <span class="ml-4">Live</span>
+                </div>
+            </a>
+
+            <div class="border-b border-grey-light border-solid my-1"></div>
+            <!-- divider line -->
+
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 flex items-center menu-item">
+                    <i class="fas fa-cog mr-4 text-aside"></i>
+                    <span>Settings</span>
+                </div>
+            </a>
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 flex items-center menu-item">
+                    <i class="fas fa-flag mr-4 text-aside"></i>
+                    <span>Report history</span>
+                </div>
+            </a>
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 flex items-center menu-item">
+                    <i class="fas fa-question-circle mr-4 text-aside"></i>
+                    <span>Help</span>
+                </div>
+            </a>
+            <a href="#" class="tracking-tight text-black font-medium">
+                <div class="pl-8 py-3 flex items-center menu-item">
+                    <i class="fas fa-comment-alt mr-4 text-aside"></i>
+                    <span>Send feedback</span>
+                </div>
+            </a>
+
+            <div class="border-b border-grey-light border-solid my-1"></div>
+            <!-- divider line -->
+
+
+            <div class="px-8 py-4">
+                <a href="#" class="text-aside text-xs font-medium tracking-tight mr-1">About</a>
+                <a href="#" class="text-aside text-xs font-medium tracking-tight mr-1">Press</a>
+                <a href="#" class="text-aside text-xs font-medium tracking-tight mr-1">Copyright</a>
+                <a href="#" class="text-aside text-xs font-medium tracking-tight mr-1">Contact us</a>
+                <a href="#" class="text-aside text-xs font-medium tracking-tight mr-1">Creators</a>
+                <a href="#" class="text-aside text-xs font-medium tracking-tight mr-1">Advertise</a>
+                <a href="#" class="text-aside text-xs font-medium tracking-tight mr-1">Developers</a>
+                <a href="#" class="text-aside text-xs font-medium tracking-tight mr-1">+Youtube</a>
+            </div>
+
+            <div class="pl-8 mb-8">
+                <a href="#" class="text-aside text-xs tracking-tight font-medium pr-2">Terms</a>
+                <a href="#" class="text-aside text-xs tracking-tight font-medium">Privacy</a>
+                <a href="#" class="text-aside text-xs tracking-tight font-medium block">Policy &amp; Safety</a>
+                <a href="#" class="text-aside text-xs tracking-tight font-medium">Test new features</a>
+            </div>
+
+            <div class="pl-8 mb-4">
+                <p class="text-xs text-aside tracking-tight">&copy; 2018 Youtube,LLC</p>
+            </div>
+
+        </div>
+        <div class="content pt-2">
+            <div class="container mx-auto">Lorem ipsum
+            </div>
+        </div>
     </main>
 
 </body>
